--- a/css/info.css
+++ b/css/info.css
@@ -3,5 +3,25 @@
     grid-column-end: 2;
     grid-row-start: 2;
     grid-row-end: 4; 
-    border: 1px solid black;
+}
+.nombre_usuario {
+    display: flex;
+    padding: 2rem;
+    flex-direction: column;
+    gap: 1rem;
+}
+.logo {
+    width: 5rem;
+    height: 5rem;
+    background-color: rgba(128, 128, 128, 0.602);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    font-weight: 700;
+    border-radius: 50%;
+}
+.nombre_usuario span {
+    font-size: 2rem;
+    font-weight: 600;
 }
