--- a/css/repositorios.css
+++ b/css/repositorios.css
@@ -3,20 +3,27 @@
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
+    height: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+    padding: 1rem;
 }
 .pages  {
     width: 20%;
     height: 70%;
     border: 1px solid black;
     border-radius: 10px;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
+
 }
 .pages:hover {
-    transition: 3s;
+    transition: 2s;
     background-color: rgb(253, 244, 231);
-    transform: rotateY(-360deg);
+    box-shadow: 12px 12px 20px rgba(100, 0, 0, 0.631);
+
 }
 .pages img {
     width: 10rem;
@@ -43,5 +50,5 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .github {
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
