--- a/css/componentes.css
+++ b/css/componentes.css
@@ -1,6 +1,26 @@
-.componentes {
+.soporte {
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 3;
     grid-row-end: 3;
+
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(2,1fr);
+    padding: 1rem;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+.div_caja_componente {
+    width: 100%;
+    border: 1px solid black;
+    padding: 1rem;
+    border-radius: 5px;
+    display: grid;
+    grid-template-columns: 60% 40%;
+}
+.div_caja_componente > img {
+    width: 75%;
+    height: 10rem;
+    
 }
