--- a/css/index.css
+++ b/css/index.css
@@ -5,3 +5,6 @@
     grid-template-columns: 15% 85%;
     grid-template-rows: 10% 40% 50%;
 }
+@media screen and (min-width: 375px) and (max-width: 480px) {
+    
+}
