--- a/css/info.css
+++ b/css/info.css
@@ -25,3 +25,16 @@
     font-size: 2rem;
     font-weight: 600;
 }
+.conocimientos {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 100%;
+    padding: 1rem;
+    gap: 0.5rem;
+    margin: auto;
+}
+.logos img {
+    width: 4rem;
+    height: 4rem;
+}
+
