--- a/css/repositorios.css
+++ b/css/repositorios.css
@@ -26,8 +26,9 @@
 
 }
 .pages img {
-    width: 100%;
-    height: 50%;
+    width: 15rem;
+    height: 10rem;
+    object-fit: contain;
 }
 .pages a {
     height: 100%;
@@ -43,7 +44,7 @@
     color: rgb(21, 16, 16);
 }
 .titulo {
-    font-size: 3rem;
+    font-size: 2rem;
 }
 .descripcion {
     font-size: 1.5rem;
