--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,68 @@
 .root {
     margin: auto;
-    height: 77rem;
+    height: 80rem;
     display: grid;
     grid-template-columns: 15% 85%;
-    grid-template-rows: 10% 40% 50%;
+    grid-template-rows: 8% 40% 50%;
 }
-@media screen and (min-width: 375px) and (max-width: 480px) {
-    
+@media screen and (min-width: 375px) and (max-width: 768px) {
+    .root {
+        display: grid;
+        grid-template-rows: 10% 20% 40rem 35%;
+        gap: 1rem;
+    }
+    .header {
+        grid-template-columns: 20% 60% 20%;
+        grid-template-rows: repeat(1, 1fr);
+        grid-column: 1/3;
+        grid-row: 1/1;
+    }
+    .repositorios {
+        grid-column: 1/3;
+        grid-row: 3/3;
+    }
+    .pages {
+        display: flex;
+        flex-wrap: wrap;
+        width: 40%;
+    }
+    .div_caja_componente {
+        height: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .div_caja_componente > img {
+        width: 5rem;
+        height: 3rem;
+        
+    }
+
+
+    .soporte {
+        grid-column: 1/3;
+        grid-row: 4/4;
+    }
+    .info {
+        grid-column: 1/3;
+        grid-row: 2/2;
+        display: flex;
+        align-items: center;
+    }
+    .logo {
+        display: none;
+    }
+    .nombre_usuario span {
+        display: none;
+    }
+
+    .opciones {
+        display: none;
+    }
+    .header span {
+        display: block;
+        grid-column-start: 3;
+        cursor: pointer;
+    }
+
 }
