--- a/css/header.css
+++ b/css/header.css
@@ -17,7 +17,7 @@
     font-size: 2rem;
     border-radius: 50%;
 }
-.header nav {
+.opciones {
     width: 80%;
     height: 100%;
     display: flex;
@@ -38,4 +38,7 @@
     align-items: center;
     border-radius: 50px;
     color: white;
+}
+.header span {
+    display: none;
 }
