--- a/css/repositorios.css
+++ b/css/repositorios.css
@@ -13,11 +13,15 @@
 }
 .pages  {
     width: 20%;
-    height: 70%;
+    height: 17rem;
     border: 1px solid black;
     border-radius: 10px;
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
 }
 .pages:hover {
     transition: 2s;
@@ -27,21 +31,15 @@
 }
 .pages img {
     width: 15rem;
-    height: 10rem;
+    height: 5rem;
     object-fit: contain;
-}
-.pages a {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    padding: 1rem;
 }
 .infor {
     color: rgb(21, 16, 16);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;    
 }
 .titulo {
     font-size: 2rem;
@@ -50,6 +48,7 @@
     font-size: 1.5rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.github {
-    font-size: 1rem;
+
+.github::placeholder {
+    color: black;
 }
