--- a/css/componentes.css
+++ b/css/componentes.css
@@ -4,23 +4,53 @@
     grid-row-start: 3;
     grid-row-end: 3;
 
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(2,1fr);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
     padding: 1rem;
     gap: 1rem;
     flex-wrap: wrap;
 }
 .div_caja_componente {
-    width: 100%;
+    width: 30rem;
+    height: 40rem;
     border: 1px solid black;
     padding: 1rem;
     border-radius: 5px;
-    display: grid;
-    grid-template-columns: 60% 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    cursor: pointer;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
+
 }
-.div_caja_componente > img {
-    width: 75%;
+.div_caja_componente:hover{
+    transition: 2s;
+    background-color: rgb(253, 244, 231);
+    box-shadow: 12px 12px 20px rgba(100, 0, 0, 0.631);
+}
+.div_caja_componente img {
+    width: 15rem;
     height: 10rem;
-    
+    object-fit: contain;
+    border-radius: 10px;
+}
+.div_categoria {
+    font-size: 1.2rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bolder;
+}
+.hardware {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0.5rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bolder;
+}
+.hardware h3 {
+    text-align: center;
+    font-size: 1.5rem;
 }
