--- a/css/header.css
+++ b/css/header.css
@@ -2,10 +2,10 @@
     grid-column: 1/3;
     display: flex;
     align-items: center;
-    justify-content: center;
     justify-content: space-around;
     gap: 1rem;
     padding: 1rem;
+    height: 8rem;
 }
 .log {
     background-color: rgb(193, 193, 193);
