--- a/css/repositorios.css
+++ b/css/repositorios.css
@@ -39,7 +39,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;  
+    text-decoration: none;  
 }
 .titulo {
     font-size: 2rem;
@@ -47,6 +48,7 @@
 .descripcion {
     font-size: 1.5rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
 }
 
 .github::placeholder {
